--- a/src/components/button/button.styles.scss
+++ b/src/components/button/button.styles.scss
@@ -16,6 +16,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  border-radius: 4px;
 
   &:hover {
     background-color: white;
