--- a/src/components/directory-item/directory-item.styles.scss
+++ b/src/components/directory-item/directory-item.styles.scss
@@ -44,21 +44,22 @@
   
     .body {
       height: 90px;
-      padding: 0 25px;
+      padding: 0 1vw;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
       border: 1px solid black;
       background-color: white;
-      opacity: 0.7;
+      opacity: 0.9;
       position: absolute;
+      max-width: 100%;
   
       h2 {
         font-weight: bold;
         margin: 0 6px 0;
         font-size: 22px;
-        color: #4a4a4a;
+        color: #2f2f2f;
       }
   
       p {
