--- a/src/components/product-card/product-card.styles.scss
+++ b/src/components/product-card/product-card.styles.scss
@@ -1,14 +1,15 @@
 .product-card-container {
-  width: 100%;
+  width: 250px;
   display: flex;
   flex-direction: column;
-  height: 350px;
+  height: 375px;
   align-items: center;
   position: relative;
+  margin-left: 10px;
 
   img {
     width: 100%;
-    height: 95%;
+    height: 250px;
     object-fit: cover;
     margin-bottom: 5px;
   }
@@ -16,9 +17,11 @@
   button {
     width: 80%;
     opacity: 0.7;
-    position: absolute;
-    top: 255px;
-    display: none;
+    // position: absolute;
+    // top: 280px;
+    display: flex;
+    min-width: 140px;
+    line-height: unset;
   }
 
   &:hover {
@@ -32,20 +35,26 @@
     }
   }
 
+  @media screen and (max-width: 700px) {
+    width: 40vw;
+
+    &:hover {
+      img {
+        opacity: unset;
+      }
+  
+      button {
+        opacity: unset;
+      }
+    }
+  }
+
   .footer {
     width: 100%;
     height: 5%;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     font-size: 18px;
-
-    .name {
-      width: 90%;
-      margin-bottom: 15px;
-    }
-
-    .price {
-      width: 10%;
-    }
+    margin-bottom: 30px;
   }
 }
