--- a/src/routes/category/category.styles.scss
+++ b/src/routes/category/category.styles.scss
@@ -3,6 +3,12 @@
   grid-template-columns: repeat(4, 1fr);
   column-gap: 20px;
   row-gap: 50px;
+
+  @media screen and (max-width: 700px) {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 15px;
+  }
 }
 
 .category-title {
