--- a/src/components/sign-in-form/sign-in-form.styles.scss
+++ b/src/components/sign-in-form/sign-in-form.styles.scss
@@ -9,6 +9,11 @@
   
     .buttons-container {
       display: flex;
+      flex-wrap: wrap;
       justify-content: space-between;
+    }
+    
+    .button-container{
+      line-height: unset;
     }
   }
