--- a/src/routes/auth/auth.styles.scss
+++ b/src/routes/auth/auth.styles.scss
@@ -1,6 +1,16 @@
 .auth-container {
     display: flex;
-    width: 900px;
-    justify-content: space-between;
-    margin: 30px auto;
+    flex-wrap: wrap;
+    // width: 900px;
+    margin: 30px;
   }
+
+  .auth-container  > *{
+    margin-bottom: 30px;
+
+    @media screen and (min-width: 900px) {
+      margin-right: 50px;
+    }
+  }
+
+  
