add mobile styling to checkout, close checkout preview when visiting checkout, add react hook to show user item was added to cart

--- a/src/components/checkout-item/checkout-item.styles.scss
+++ b/src/components/checkout-item/checkout-item.styles.scss
@@ -6,10 +6,14 @@
     padding: 15px 0;
     font-size: 20px;
     align-items: center;
+    justify-content: space-between;
   
     .image-container {
       width: 23%;
       padding-right: 15px;
+      // @media screen and (max-width: 450px) {
+      //     padding-right: unset;
+      // }
   
       img {
         width: 100%;
@@ -20,6 +24,20 @@
     .quantity,
     .price {
       width: 23%;
+    }
+
+    .price{
+      @media screen and (max-width: 700px) {
+          width: 10%
+      }
+      @media screen and (max-width: 450px) {
+        display: none;
+      }
+    }
+    .name {
+      @media screen and (max-width: 700px) {
+        width: 36%
+      }
     }
   
     .quantity {
