--- a/src/components/button/button.styles.scss
+++ b/src/components/button/button.styles.scss
@@ -9,7 +9,9 @@
   background-color: black;
   color: white;
   text-transform: uppercase;
-  font-family: 'Open Sans Condensed';
+  font-family: 'Arial',
+    'Helvetica',
+    'sans-serif';
   font-weight: bolder;
   border: none;
   cursor: pointer;
