--- a/src/components/category-preview/category-preview.styles.scss
+++ b/src/components/category-preview/category-preview.styles.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   margin-bottom: 30px;
 
-  @media screen and (max-width: 700px) {
+  @media screen and (max-width: 875px) {
     align-items: center;    
   }
 
@@ -19,12 +19,13 @@
 
   .preview {
     display: flex;
+    flex-wrap: wrap;
+    grid-gap: 15px;
     justify-content: left;
 
-    @media screen and (max-width: 700px) {
+    @media screen and (max-width: 875px) {
       display: grid;
       grid-template-columns: 1fr 1fr;
-      grid-gap: 15px;
     }
   }
 }
