--- a/src/components/payment-form/payment-form.styles.scss
+++ b/src/components/payment-form/payment-form.styles.scss
@@ -4,6 +4,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin-bottom: 100px;
 }
 
 .form-container {
@@ -28,7 +29,9 @@
   background-color: black;
   color: white;
   text-transform: uppercase;
-  font-family: 'Open Sans Condensed';
+  font-family: 'Arial',
+    'Helvetica',
+    'sans-serif';
   font-weight: bolder;
   border: none;
   cursor: pointer;
