--- a/src/routes/category/category.styles.scss
+++ b/src/routes/category/category.styles.scss
@@ -1,10 +1,10 @@
 .category-container {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  display: flex;
+  flex-wrap: wrap;
   column-gap: 20px;
   row-gap: 50px;
 
-  @media screen and (max-width: 700px) {
+  @media screen and (max-width: 875px) {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-gap: 15px;
