--- a/src/routes/checkout/checkout.styles.scss
+++ b/src/routes/checkout/checkout.styles.scss
@@ -1,10 +1,16 @@
 .checkout-container {
-    width: 55%;
+    width: 80%;
+    max-width: 800px;
     min-height: 90vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     margin: 50px auto 0;
+
+    @media screen and (max-width: 700px) {
+        width: 90%;
+        padding-right: 5%;
+    }
   
     .checkout-header {
       width: 100%;
@@ -20,6 +26,20 @@
         &:last-child {
           width: 8%;
         }
+        &:nth-child(2){
+          @media screen and (max-width: 700px) {
+            width: 36%
+          }
+        }
+        &:nth-child(4) {
+          @media screen and (max-width: 700px) {
+            width: 10%
+          }
+          @media screen and (max-width: 450px) {
+            display: none;
+          }
+        }
+
       }
     }
   
