--- a/src/routes/checkout/checkout.styles.scss
+++ b/src/routes/checkout/checkout.styles.scss
@@ -2,6 +2,7 @@
     width: 80%;
     max-width: 800px;
     min-height: 90vh;
+    min-width: 275px;
     display: flex;
     flex-direction: column;
     align-items: center;
