--- a/src/components/footer/footer.styles.scss
+++ b/src/components/footer/footer.styles.scss
@@ -20,10 +20,19 @@
 }
 
 #foot-2{
-  max-width: 70px;
-  transform: translateY(-6px);
+  max-width: 60px;
+  transform: translateY(-12px);
   border-radius: 5px;
   background-color: white;
   padding: 2px;
   filter: invert(100%);
+}
+
+#foot-3{
+  max-width: 70px;
+  border-radius: 5px;
+  margin-left: 20vw;
+  &:hover{
+    cursor: pointer;
+  }
 }
